<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Infrastructure on main activity -->
    <string name="app_name">Conor\'s Photo Frame</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="title_tab0">Start</string>
    <string name="title_tab1">Daily Timings</string>
    <string name="title_tab2">Sleep Now</string>

    <!-- Front page (tab) -->
    <string name="front_page_text">This is the front page</string>
    <string name="refresh_button_label">Refresh photos</string>
    <string name="show_photos_button_label">Show photos &#8230;</string>
    <string name="start_front_button_label">Show photos (using timers) &#8230;</string>
    <string name="stop_front_button_label">Stop all timers</string>
    
    <!--  Timer page -->
    <string name="enable_timed_sleep_label">Enabled:</string>
    <string name="start_sleep_time_label">Go to sleep at:</string>
    <string name="end_sleep_time_label">Wake up at:</string>
    <string name="start_daily_button_label">Start daily timings</string>
    <string name="stop_daily_button_label">Stop all timers</string>
    
    <!-- 'Time now' page -->
    <string name="enable_sleep_now_label">Enabled:</string>
    <string name="delay_before_sleep_secs">Awake interval (seconds):</string>
    <string name="delay_before_wake_secs">Asleep interval (seconds):</string>
    <string name="start_intervals_button_label">Start now</string>
    <string name="stop_intervals_button_label">Stop all timers</string>

    <!--  service -->
    <string name="local_service_label">Photo Frame Service</string>
    <string name="local_service_started">Photo Frame Service is running</string>
    
    <!--  photo view page -->
    <string name="photo_activity_name">Photos</string> <!--  will be hidden when we do fullscreen -->
    <string name="photo_view_content_descrption">Photos</string>
    
    <!--  Settings page -->
    <string name="settings_activity_name">Settings</string>
    <string name="pref_photo_display">Photo Display settings</string>
    <string name="pref_delay_secs">Delay between photos (seconds)</string>
    <string name="pref_delay_secs_summary">Delay between photos</string>
    <string name="pref_delay_secs_summary_pt1">Delay between photos is</string>
    <string name="pref_delay_secs_summary_pt2">seconds</string>
    <!-- 
    <string name="pref_display_random">Random order</string>
    <string name="pref_display_random_summary">Show photos in random order</string>
    -->
    <string name="pref_display_order">Display order</string>
    <string-array name="display_order_labels">
        <item>Sequential</item>
        <item>Random</item>
    </string-array>
    <string-array name="display_order_values">
        <item>SEQUENTIAL</item>
        <item>RANDOM</item>
    </string-array>
    <string name="display_order_value_default">RANDOM</string>
    <string name="pref_display_order_summary_pt1">Currently using</string>
    <string name="pref_display_order_summary_pt2">order</string>
    <string name="pref_text_display">Text Display settings</string>
    <string name="pref_text_font_size">Font size (pixels)</string>
    <string name="pref_text_font_size_summary_pt1">Font size is</string>
    <string name="pref_text_font_size_summary_pt2">pixels</string>
    <string name="pref_font_color">Text Color</string>
    <string-array name="font_color_labels">
        <item>RED</item>
        <item>GREEN</item>
        <item>WHITE</item>
        <item>BLACK</item>
    </string-array>
    <string-array name="font_color_values">
        <item>FFFF0000</item>
        <item>FF00FF00</item>
        <item>FFFFFFFF</item>
        <item>FF000000</item>
    </string-array>
    <string name="font_color_value_default">FFFF0000</string>
    <string name="pref_font_color_summary_pt1">Text Color is</string>
    <string name="pref_font_color_summary_pt2"></string>
    
    <!--  Help page -->
    <string name="help_activity_name">Help</string>
    <string name="help_text1_content">Photo Frame, V1.0, Feb 2014</string>
    <string name="help_text2_content">Written by Conor O\'Neill</string>
    <string name="help_text3_content">Published by Puddle Enterprises</string>
    <string name="help_text4_content">For further information, please visit:</string>
    <string name="help_url_content">www.puddleenterprises.com</string>
    
</resources>
