<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_photo_display"
        android:key="pref_photo_display_settings"
        >
      <EditTextPreference
        android:key="pref.delay.secs"
        android:title="@string/pref_delay_secs"
        android:summary="@string/pref_delay_secs_summary"
        android:inputType="number"
        android:defaultValue="10" />
      <!-- 
      <CheckBoxPreference
        android:key="pref.display.random"
        android:title="@string/pref_display_random"
        android:summary="@string/pref_display_random_summary"
        android:defaultValue="true" />
        -->
    <ListPreference
        android:key="pref.display.order"
        android:title="@string/pref_display_order"
        android:dialogTitle="@string/pref_display_order"
        android:entries="@array/display_order_labels"
        android:entryValues="@array/display_order_values"
        android:defaultValue="@string/display_order_value_default" />
    </PreferenceCategory>
</PreferenceScreen>
