<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SleepNowFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/help1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/help_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text1_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/help_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text2_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/help_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text3_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/help_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text4_content"
                android:textSize="20sp" />
            
            <TextView
                android:id="@+id/help_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_url_content"
                android:autoLink="web"
                android:textSize="20sp" />

</LinearLayout>
