<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SleepTimingsFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
                    android:id="@+id/tab0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_timed_sleep_label"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/endSleepLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_sleep_time_label"
                        android:textSize="20sp" />

                    <TimePicker
                        android:id="@+id/endSleepTimePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="70dp" />
                    
                    <TextView
                        android:id="@+id/startSleepLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_sleep_time_label"
                        android:textSize="20sp" />

                    <TimePicker
                        android:id="@+id/startSleepTimePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

            <LinearLayout
            android:id="@+id/dailyTimingsButtonPair"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/startDailyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_daily_button_label" />

            <Button
                android:id="@+id/stopDailyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_daily_button_label" />
                <!-- style="?android:attr/buttonBarButtonStyle" -->
            </LinearLayout>
                    
</LinearLayout>
