<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SleepNowFragment" >

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/startSleepLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay_before_sleep_secs"
                android:textSize="20sp" />

            <NumberPicker
                android:id="@+id/delayBeforeSleepNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/endSleepLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay_before_wake_secs"
                android:textSize="20sp" />

            <NumberPicker
                android:id="@+id/delayBeforeWakeNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/intervalTimingsButtonPair"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/startIntervalsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_intervals_button_label" />

            <Button
                android:id="@+id/stopIntervalsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_intervals_button_label" />
                <!-- style="?android:attr/buttonBarButtonStyle" -->
            </LinearLayout>

        </LinearLayout>

</RelativeLayout>
